--- a/index.html
+++ b/index.html
@@ -4,57 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <header id="header">
-        <div class="container">
-            <h1><a href="#">LOGO</a></h1>
-            <nav>
-                <ul class="depth-01">
-                    <li>
-                        <a href="#">대메뉴1</a>
-                        <ul class="depth-02">
-                            <li><a href="#">소메뉴1</a></li>
-                            <li><a href="#">소메뉴2</a></li>
-                            <li><a href="#">소메뉴3</a></li>
-                            <li><a href="#">소메뉴4</a></li>
-                            <li><a href="#">소메뉴5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">대메뉴2</a>
-                        <ul class="depth-02">
-                            <li><a href="#">소메뉴1</a></li>
-                            <li><a href="#">소메뉴2</a></li>
-                            <li><a href="#">소메뉴3</a></li>
-                            <li><a href="#">소메뉴4</a></li>
-                            <li><a href="#">소메뉴5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">대메뉴3</a>
-                        <ul class="depth-02">
-                            <li><a href="#">소메뉴1</a></li>
-                            <li><a href="#">소메뉴2</a></li>
-                            <li><a href="#">소메뉴3</a></li>
-                            <li><a href="#">소메뉴4</a></li>
-                            <li><a href="#">소메뉴5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">대메뉴4</a>
-                        <ul class="depth-02">
-                            <li><a href="#">소메뉴1</a></li>
-                            <li><a href="#">소메뉴2</a></li>
-                            <li><a href="#">소메뉴3</a></li>
-                            <li><a href="#">소메뉴4</a></li>
-                            <li><a href="#">소메뉴5</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <ul>
+        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
+        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
+        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
+        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
+    </ul>
 </body>
 </html>
