--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./sass/sample.min.css">
 </head>
 <body>
     <ul>
-        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
-        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
-        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
-        <li><span><img src="" alt=""><a href="#">더 보기</a></span></li>
+        <li>
+            <span>
+                <img src="./img/shop.jpg" alt="릿킴1">
+            </span>
+            <a href="#">더 보기</a>
+        </li>
+        <li><span><img src="./img/shop2.jpg" alt="릿킴2"></span><a href="#">더 보기</a></li>
+        <li><span><img src="./img/shop3.jpg" alt="릿킴3"></span><a href="#">더 보기</a></li>
+        <li><span><img src="./img/shop4.jpg" alt="릿킴4"></span><a href="#">더 보기</a></li>
     </ul>
 </body>
 </html>
