--- a/html/family.html
+++ b/html/family.html
@@ -12,50 +12,51 @@
         a{
             text-decoration: none;
         }
-        ul,ol,dl{
+        ul{
             list-style: none;
         }
         #family{
             width: 300px;
-            margin: 500px auto;
+            background-color: #333;
+            margin: 400px auto;
             text-align: center;
             position: relative;
         }
-        #family input{
+        #family #familybox{
             display: none;
-        }
+        } 
         #family label{
-            display: block;
-            line-height: 50px;
-            background-color: #333;
             color: #fff;
+            line-height: 50px;
+            display: block;
         }
         #family ul{
             position: absolute;
             width: 100%;
-            left: 0;
             bottom: 100%;
+            left: 0;
             height: 0;
             overflow: hidden;
             transition: all 0.6s ease-in-out;
         }
-        #family ul li{}
+        #familt ul li{
+        }
         #family ul li a{
             display: block;
-            line-height: 50px;
-            background-color: #333;
             color: #fff;
+            line-height: 50px;
             border-bottom: solid 1px #fff;
+            background-color: #333;
         }
-        #family input:checked ~ ul{
+        #family #familybox:checked ~ ul{
             height: 255px;
         }
     </style>
 </head>
 <body>
     <div id="family">
-        <input type="checkbox" id="checkBox">
-        <label for="checkBox">패밀리사이트</label>
+        <input type="checkbox" id="familybox">
+        <label for="familybox">패밀리사이트</label>
         <ul>
             <li><a href="#">패밀리사이트1</a></li>
             <li><a href="#">패밀리사이트2</a></li>
