--- a/html/dl.html
+++ b/html/dl.html
@@ -9,24 +9,17 @@
     <script src="../js/dl.js"></script>
 </head>
 <body>
-    <!-- 웹 접근성 때문에 남발해서 사용하면 안됨
-    센스 리더 같은 프로그램, 스크린 리더가 이상하게 읽음. -->
-    <!-- 반드사 dl은 하나 이상의 dt+dd 짝을 담고 있어야 함. -->
-    <!-- 그렇다고, 꼭 한 쌍일 필요는 없음. -->
-    <!-- dt+dd+dd / dt+dt+dd 도 ㄱㅊ음-->
-    <!-- dl 안에는 dt, dd만 사용해야 함. -->
     <dl>
-        <dt>공지사항인데</dt>
-        <dd>잘 좀 읽어</dd>
+        <dt>재밋니?</dt>
+        <dd>내 볼 만지니까 재밋니?</dd>
 
-        <dt>메롱메롱</dt>
-        <dd>시른대</dd>
+        <dt>만만하니?</dt>
+        <dd>내가 웃기만 하니까 만만하니?</dd>
 
-        <dt>집은 언제 가나</dt>
-        <dd>6시에 가지</dd>
+        <dt>야</dt>
+        <dd>보자보자 하니깐 보자기로 보이니?</dd>
 
-        <dt>6시는 언제 오나</dt>
-        <dd>3시간 반 남앗내..</dd>
+        <dt>킹받게 진짜</dt>
+        <dd>집가서 니 얼굴이나 만져라</dd>
     </dl>
 </body>
-</html>
