--- a/html/family.html
+++ b/html/family.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>패밀리사이트 연습</title>
     <style>
         *{
             padding: 0;
@@ -17,18 +17,19 @@
         }
         #family{
             width: 300px;
-            background-color: #333;
-            margin: 400px auto;
+            margin: 500px auto;
             text-align: center;
             position: relative;
         }
-        #family #familybox{
+        #family input{
             display: none;
-        } 
+        }
         #family label{
-            color: #fff;
             line-height: 50px;
+            color: #fff;
             display: block;
+            background-color: #333;
+            border-radius: 40%;
         }
         #family ul{
             position: absolute;
@@ -38,25 +39,29 @@
             height: 0;
             overflow: hidden;
             transition: all 0.6s ease-in-out;
-        }
-        #familt ul li{
+
         }
         #family ul li a{
             display: block;
             color: #fff;
             line-height: 50px;
             border-bottom: solid 1px #fff;
+            border-radius: 40%;
             background-color: #333;
         }
-        #family #familybox:checked ~ ul{
+        #family input:checked ~ ul{
             height: 255px;
+        }
+        #family  ul li:hover a{
+            background-color: #fff;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <div id="family">
-        <input type="checkbox" id="familybox">
-        <label for="familybox">패밀리사이트</label>
+        <input type="checkbox"  id="checkbox">
+        <label for="checkbox">패밀리사이트</label>
         <ul>
             <li><a href="#">패밀리사이트1</a></li>
             <li><a href="#">패밀리사이트2</a></li>
