--- a/html/table.html
+++ b/html/table.html
@@ -9,52 +9,62 @@
             padding: 0;
             margin: 0;
         }
-        #tb-tag{
-            width: 800px;
-            margin: 0 auto;
+        table, th, td{
+            border: solid 1px #000;
+            border-collapse: collapse;
+            text-align: center;
         }
-        caption{
+        table{
+            margin: 0 auto;
+            width: 800px;
             line-height: 50px;
         }
-        th, td{
-            border: solid 1px #333;
-            border-collapse: collapse;
+        table caption{
+        font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <table id="tb-tag">
-        <caption>테이블 태그 샘플 태그입니다. 제목을 의미함</caption>
-        <thead>
-            <tr>
-                <th>NO</th>
-                <th>타이틀이 담기는 태그</th>
-                <th>두껍고 가운데 정렬이 기본값</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>데이터가 담기는 태그</td>
-                <td rowspan="2">아래의 td태그와 병합할거임</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>윗층에서 하나를 가져가는 바람에 여기는 td가 두개뿐이다.</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td><b>다시 정상화</b></td>
-                <td><em>다시 칸 세개됨</em></td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3" height="400px" align="center" valign="middle">
-                    두근거린다<br>왜냐하면은요<br>집가기 30분 전!캬캬
-                </td>
-            </tr>
-        </tfoot>
-    </table>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <table>
+            <caption>테이블 제목</caption>
+            <thead>
+                <tr>
+                    <th>NO</th>
+                    <th>타이틀이 담기는 태그</th>
+                    <th>굵고 가운데 정렬이 포인트</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>데이터가 담기는 태그</td>
+                    <td rowspan="2">아래 td태그와 병합할거임</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>위 태그와 병합하여 여기는 태그가 두개</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><b>정상화된 3층</b></td>
+                    <td><em>ㅇ아아ㅏ</em></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3" height="400px" align="center" valign="center">덥다<br>더워<br>아쯔이</td>
+                </tr>
+            </tfoot>
+        </table>
+    </body>
+    </html>
 </body>
 </html>
