feat:학원에서 연습

--- a/html/dl.html
+++ b/html/dl.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/dl.css">
+    <link rel="stylesheet" href="../css/dl.css">linke
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="../js/dl.js"></script>
 </head>
 <body>
     <dl>
-        <dt>재밋니?</dt>
-        <dd>내 볼 만지니까 재밋니?</dd>
-
-        <dt>만만하니?</dt>
-        <dd>내가 웃기만 하니까 만만하니?</dd>
-
-        <dt>야</dt>
-        <dd>보자보자 하니깐 보자기로 보이니?</dd>
-
-        <dt>킹받게 진짜</dt>
-        <dd>집가서 니 얼굴이나 만져라</dd>
+        <dt>한시간도 안남음</dt>
+        <dd>ㄹㅈㄷ</dd>
+    </dl>
+    <dl>
+        <dt>이제시간 빨리간당</dt>
+        <dd>쿸쿸</dd>
+    </dl>
+    <dl>
+        <dt>오예</dt>
+        <dd>집가서 밥먹어야징</dd>
+    </dl>
+    <dl>
+        <dt>오늘은 머하지</dt>
+        <dd>머하고 잘가..</dd>
     </dl>
 </body>
+</html>
