--- a/html/table.html
+++ b/html/table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>몇번째일지 모를 테이블 연습 그래도 기억이 안나는 대참사</title>
     <style>
         *{
             padding: 0;
@@ -12,59 +12,51 @@
         table, th, td{
             border: solid 1px #000;
             border-collapse: collapse;
+            line-height: 50px;
             text-align: center;
         }
         table{
-            margin: 0 auto;
             width: 800px;
-            line-height: 50px;
+            margin: 200px auto;
         }
-        table caption{
-        font-weight: bold;
+        caption{
+            line-height: 50px;
         }
     </style>
 </head>
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <table>
-            <caption>테이블 제목</caption>
-            <thead>
-                <tr>
-                    <th>NO</th>
-                    <th>타이틀이 담기는 태그</th>
-                    <th>굵고 가운데 정렬이 포인트</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>데이터가 담기는 태그</td>
-                    <td rowspan="2">아래 td태그와 병합할거임</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>위 태그와 병합하여 여기는 태그가 두개</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td><b>정상화된 3층</b></td>
-                    <td><em>ㅇ아아ㅏ</em></td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3" height="400px" align="center" valign="center">덥다<br>더워<br>아쯔이</td>
-                </tr>
-            </tfoot>
-        </table>
-    </body>
-    </html>
+    <table>
+        <caption>테이블 제목이다 이놈드라</caption>
+        <thead>
+            <tr>
+                <th>NO</th>
+                <th>냠냠</th>
+                <th>쩝쩝</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>데이터가 들어가는 공간</td>
+                <td>하ㅏㅏ집에 가고십다</td>
+                <td rowspan="2">아래 데이터랑 병합할거다</td>
+            </tr>
+            <tr>
+                <td><b>데이터가 들어가는 공간</b></td>
+                <td><em>윗층이 가져가서 하나 덜씀</em></td>
+            </tr>
+            <tr>
+                <td>정상화된 3층</td>
+                <td>흑흑</td>
+                <td>영차영차</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3" height="400px" align="center" valign="center">
+                    흐미 너무 더워<br>그래두 에어컨이 잇어서 다행이당<br>여름이제슬슬꺼지렴
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
