feat:이미지 코드 연습

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./sass/sample.min.css">
+    <link rel="stylesheet" href="../sass/sample.min.css">
 </head>
 <body>
     <ul>
@@ -14,9 +14,9 @@
             </span>
             <a href="#">더 보기</a>
         </li>
-        <li><span><img src="./img/shop2.jpg" alt="릿킴2"></span><a href="#">더 보기</a></li>
-        <li><span><img src="./img/shop3.jpg" alt="릿킴3"></span><a href="#">더 보기</a></li>
-        <li><span><img src="./img/shop4.jpg" alt="릿킴4"></span><a href="#">더 보기</a></li>
+        <li><span><img src="../img/shop2.jpg" alt="릿킴2"></span><a href="#">더 보기</a></li>
+        <li><span><img src="../img/shop3.jpg" alt="릿킴3"></span><a href="#">더 보기</a></li>
+        <li><span><img src="../img/shop4.jpg" alt="릿킴4"></span><a href="#">더 보기</a></li>
     </ul>
 </body>
 </html>
