feat.이미지 코드 복습2

--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="../sass/sample.min.css">
 </head>
 <body>
-    <ul>
-        <li>
-            <span>
-                <img src="./img/shop.jpg" alt="릿킴1">
-            </span>
-            <a href="#">더 보기</a>
-        </li>
-        <li><span><img src="../img/shop2.jpg" alt="릿킴2"></span><a href="#">더 보기</a></li>
-        <li><span><img src="../img/shop3.jpg" alt="릿킴3"></span><a href="#">더 보기</a></li>
-        <li><span><img src="../img/shop4.jpg" alt="릿킴4"></span><a href="#">더 보기</a></li>
-    </ul>
+        <ul>
+            <li>
+                <span>
+                    <img src="../img/shop.jpg" alt="릿킴1">
+                </span>
+                <a href="#">더 보기</a>
+            </li>
+            <li><span><img src="../img/shop2.jpg" alt="릿킴2"></span><a href="#">더 보기</a></li>
+            <li><span><img src="../img/shop3.jpg" alt="릿킴3"></span><a href="#">더 보기</a></li>
+            <li><span><img src="../img/shop4.jpg" alt="릿킴4"></span><a href="#">더 보기</a></li>
+        </ul>
 </body>
 </html>
