feat:스티키, 팝업 코드 수업

--- a/html/tab.html
+++ b/html/tab.html
@@ -65,23 +65,18 @@
         }
         #tab .notice-content li a{
             color: #000;
-            /* display: flex;
-            align-items: center; */
-            /* gap: 14px; */
-            display: block; /*반드시 블록요소여야함*/
-            width: 80%; /*반드시 위드값이 존재해야함*/
-            overflow: hidden; /*너비를 넘어가면 안보이게*/
-            white-space: nowrap; /*두줄처리 방지*/
-            text-overflow: ellipsis; /*...처리*/
+            display: flex;
+            align-items: center;
+            gap: 14px;
         }
-        /* a::before{
+        a::before{
             content: "";
             display: block;
             width: 5px;
             height: 5px;
             background-color: #333;
             border-radius: 50%;
-        } */
+        }
     </style>
 </head>
 <body>
