--- a/html/table.html
+++ b/html/table.html
@@ -2,58 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>몇번째일지 모를 테이블 연습 그래도 기억이 안나는 대참사</title>
-    <style>
-        *{
-            padding: 0;
-            margin: 0;
-        }
-        table, th, td{
-            border: solid 1px #000;
-            border-collapse: collapse;
-            line-height: 50px;
-            text-align: center;
-        }
-        table{
-            width: 800px;
-            margin: 200px auto;
-        }
-        caption{
-            line-height: 50px;
-        }
-    </style>
+    <meta name="viewport" content="width=  , initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/table.css">
 </head>
 <body>
     <table>
-        <caption>테이블 제목이다 이놈드라</caption>
+        <caption>테이블 제목</caption>
         <thead>
             <tr>
                 <th>NO</th>
-                <th>냠냠</th>
-                <th>쩝쩝</th>
+                <th>흑흑</th>
+                <th>굵고 가운데 정렬이 기본값</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>데이터가 들어가는 공간</td>
-                <td>하ㅏㅏ집에 가고십다</td>
-                <td rowspan="2">아래 데이터랑 병합할거다</td>
+                <td>데이터가 들어감</td>
+                <td>우웅</td>
+                <td rowspan="2">아래 태그랑 병합할거임</td>
             </tr>
             <tr>
-                <td><b>데이터가 들어가는 공간</b></td>
-                <td><em>윗층이 가져가서 하나 덜씀</em></td>
+                <td>데이터가 들어감</td>
+                <td>우웅</td>
             </tr>
             <tr>
                 <td>정상화된 3층</td>
-                <td>흑흑</td>
-                <td>영차영차</td>
+                <td><em>우웅</em></td>
+                <td><b>아아ㅏ아ㅏ아ㅏ</b></td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3" height="400px" align="center" valign="center">
-                    흐미 너무 더워<br>그래두 에어컨이 잇어서 다행이당<br>여름이제슬슬꺼지렴
+                <td colspan="3" align="center" valign="center" height="400px">
+                    아 새삼스럽게 하기실타<br>ㅎ후후<br>손에 건어물냄새
                 </td>
             </tr>
         </tfoot>
