feat:남아서 연습

--- a/html/tab.html
+++ b/html/tab.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>탭 연습</title>
+    <link rel="stylesheet" href="../css/tab.css">
 </head>
 <body>
-    div.container>
+    <div id="tab-box">
+        <ul class="ab-box">
+            <li><input type="radio" id="notice" name="tab">
+                <label for="notice">
+                공지사항</label>
+                <div>나는 공지사항입니다.</div>
+            </li>
+            <li><input type="radio" id="list" name="tab">
+                <label for="list">
+                리스트</label>
+                <div>나는 리스트입니다.</div>
+            </li>
+            <li><input type="radio" id="faq" name="tab">
+                <label for="faq">
+                자주묻는 질문</label>
+                <div>나는 자주묻는 질문입니다.</div>
+            </li>
+            <li><input type="radio" id="tap" name="tab">
+                <label for="list">
+                탭</label>
+                <div>나는 탭입니다.</div>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
