--- a/65/index.html
+++ b/65/index.html
@@ -67,8 +67,8 @@
                             <label for="notice-check">공지사항</label>
                             <div class="ab-box">
                                 <dl>
-                                    <dt><a href="#none" id="open-btn">신규회원 대상 할인 이벤트 안내</a></dt>
-                                    <dd><a href="#">2020.11.23</a></dd>
+                                    <dt><a href="#none">신규회원 대상 할인 이벤트 안내</a></dt>
+                                    <dd><a href="#">2020.11.23<a></dd>
                                 </dl>
                                 <dl>
                                     <dt><a href="#">S/S 시즌 신규 의류 신상품 안내</a></dt>
@@ -76,11 +76,11 @@
                                 </dl>
                                 <dl>
                                     <dt><a href="#">반품/환불 규정에 대해 알려드립니다</a></dt>
-                                    <dd><a href="#">2020.11.23</a></dd>
+                                    <dd><a href="#">2020.11.23<a></dd>
                                 </dl>
                                 <dl>
                                     <dt><a href="#">3월 재입고 품목을 알려드립니다</a></dt>
-                                    <dd><a href="#">2020.11.23</a></dd>
+                                    <dd><a href="#">2020.11.23<a></dd>
                                 </dl>
                             </div>
                         </li>
@@ -89,48 +89,22 @@
                             <label for="gallery-check">갤러리</label>
                             <div class="ab-box">
                                 <ul>
-                                    <li><a href=""><img src="./images/icon1.jpg" alt=""></a></li>
-                                    <li><a href=""><img src="./images/icon2.jpg" alt=""></a></li>
-                                    <li><a href=""><img src="./images/icon3.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="./images/icon1.jpg" alt="첫 번째 사진"></a></li>
+                                    <li><a href="#"><img src="./images/icon2.jpg" alt="두 번째 사진"></a></li>
+                                    <li><a href="#"><img src="./images/icon3.jpg" alt="세 번째 사진"></a></li>
                                 </ul>
                             </div>
                         </li>
                     </ul>
                 </li>
-                <li class="middle-banner"></li>
+                <li class="middle-banner">
+                    <a href="#"></a>
+                </li>
                 <li class="direct">
-                    <button class="btn"></button>
+                    <button>바로가기</button>
                 </li>
             </ul>
         </section>
-        <footer id="footer">
-            <ul>
-                <li class="bottom-logo">
-                    <a href="./images/footerLogo.png"></a>
-                </li>
-                <li class="copy">
-                    <p>COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</p>
-                </li>
-                <li class="sns-icon">
-                    <ul class="sns-list">
-                        <li><a href="#"><img src="./images/sns1.jpg" alt="페이스북 아이콘"></a></li>
-                        <li><a href="#"><img src="./images/sns2.jpg" alt="트위터 아이콘"></a></li>
-                        <li><a href="#"><img src="./images/sns3.jpg" alt="인스타그램 아이콘"></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </footer>
     </div>
-    <div id="popup-box">
-        <button id="close-btn">닫기</button>
-        <h3>신규회원 대상 이벤트 안내</h3>
-        <p> 즐거운 쇼핑 환경을 위해 항상 노력하는 JUST 쇼핑몰입니다. 
-            고객님들께 한 단계 더 나아가 보답하는 ON쇼핑몰이 되고자
-            신규회원 대상 10% 할인 이벤트를 실시하고 있습니다. 
-            웹과 모바일에서 모두 이용 가능하며, 
-            수준 높은 서비스를 위해 앞으로도 꾸준히 노력할 것을 약속드립니다.</p>
-    </div>
-    <script src="./script/jquery-1.12.3.js"></script>
-    <script src="./script/main.js"></script>
 </body>
 </html>
