--- a/65/index.html
+++ b/65/index.html
@@ -68,7 +68,7 @@
                             <div class="ab-box">
                                 <dl>
                                     <dt><a href="#none">신규회원 대상 할인 이벤트 안내</a></dt>
-                                    <dd><a href="#">2020.11.23<a></dd>
+                                    <dd><a href="#">2020.11.23</a></dd>
                                 </dl>
                                 <dl>
                                     <dt><a href="#">S/S 시즌 신규 의류 신상품 안내</a></dt>
@@ -76,11 +76,11 @@
                                 </dl>
                                 <dl>
                                     <dt><a href="#">반품/환불 규정에 대해 알려드립니다</a></dt>
-                                    <dd><a href="#">2020.11.23<a></dd>
+                                    <dd><a href="#">2020.11.23</a></dd>
                                 </dl>
                                 <dl>
                                     <dt><a href="#">3월 재입고 품목을 알려드립니다</a></dt>
-                                    <dd><a href="#">2020.11.23<a></dd>
+                                    <dd><a href="#">2020.11.23</a></dd>
                                 </dl>
                             </div>
                         </li>
@@ -98,13 +98,16 @@
                     </ul>
                 </li>
                 <li class="middle-banner">
-                    <a href="#"></a>
+                    <a href="#">
+                    </a>
                 </li>
                 <li class="direct">
-                    <button>바로가기</button>
+                    <button onclick="goToPage()">바로가기</button>
+                    <a href="#"></a>
                 </li>
             </ul>
         </section>
     </div>
+    <script src="./script/main.js"></script>
 </body>
 </html>
