--- a/js/05.자료형.html
+++ b/js/05.자료형.html
@@ -10,15 +10,20 @@
         // 데이터 타입은 크게 8가지로 나뉨
 
         // 문자형(String)
-        // 숫자형(Number)
+        // 숫자형(Number)햣
         // 불린(Boolean) {true, false}
         // 배열(Array)
         // 객체(Object)
         // 함수(Funtion)
-        // 널(Null) -> 변수가 존재는 하나, 값이 없다.
-        // (의도적으로 데이터가 없음을 나타내기 위해서 사용하는 표현 수단)
-        // 미정의(undefined) -> 변수가 존재하나, 값이 정해지지 않은 상태(값이 없는 것과는 다름)
-        // 아직 데이터가 정해지지 않음
+        // 널(Null) -> 변수가 의도적으로 '값이 없음'을 나타내도록 설정한 상태
+        // (변수를 일시적으로 비워두고 싶을 때 사용하는 값)
+        // (프로그래머가 변수에 의도적으로 '값이 없음'을 할당 할 때 자주 사용)
+        // 미정의(undefined) -> 변수가 선언 되었지만, 아직 값이 할당되지 않은 상태(값이 없는 것과는 다름)
+        // (변수 선언 후에 초기화 하지 않으면 기본적으로 undefined 값이 할당됨)
+        // 의도적으로 undefined을 할당하는 경우는 거의 없음
+        // 느슨한 비교 : == (같다), 엄격한 비교 : === (데이터 타입까지 같다)
+        // 느슨한 비교에서는 undefined와 Null이 서로 같다고 평가해버림
+        // 엄격한 비교에서는 서로 타입이 다르기 때문에 같이 않다고 평가함
 
         // 원시형
         // 변경할 수 없는 값, 한 번 생성되면 변경 불가능
